style.css
:root {
  --primary-color: rgb(170, 11, 37);
  --primary-color-hover: rgb(114, 4, 22);
  --primary-color-active: rgb(77, 7, 19);
  --primary-color-light: rgb(214, 37, 67);
}

/*
* Chillax: https://www.fontshare.com/fonts/chillax
*/

@font-face {
  font-family: "Heavitas";
  src: url("assets/Heavitas.ttf");
}

@font-face {
  font-family: "Chillax";
  src: url("assets/Chillax-Regular.woff2") format("woff2");
  font-weight: 400;
  font-display: swap;
  font-style: normal;
}

@font-face {
  font-family: "Chillax";
  src: url("assets/Chillax-Semibold.woff2") format("woff2");
  font-weight: 600;
  font-display: swap;
}

html,
body {
  margin: 0;
  padding: 0;
  font-family: "Chillax", sans-serif;
  height: 100vh;
  max-height: 100vh;
  overflow: hidden;
  color: white;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: url("assets/austronaut-in-wilderness.png") no-repeat center center;
}

.vignette {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  box-shadow: inset 0 0 220px 220px rgba(0, 0, 0, 1);
  pointer-events: none;
  z-index: -1;
}

main {
  position: relative;
  z-index: 0;
  padding: 150px;
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-rows: 1fr;
  grid-template-areas: "text aside";
  gap: 50px;
  height: 100%;
}

main > div {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
  grid-area: text;
}

h1 {
  color: white;
  font-size: 5rem;
  display: flex;
  flex-direction: column;
  text-transform: uppercase;
}

h1 span:first-child {
  font-family: "Chillax", sans-serif;
  font-weight: 400;
}

h1 span:last-child {
  font-family: "Heavitas", sans-serif;
  margin-top: -1.5rem;
  font-kerning: none;
}

.cinema {
  color: rgba(255, 255, 255, 0.5);
  text-transform: uppercase;
  font-size: 14px;
  letter-spacing: 1px;
}

.cinema span {
  font-weight: 600;
  color: white;
  color: var(--primary-color-light);
}

aside {
  grid-area: aside;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

aside button {
  padding: 15px;
  font-size: 16px;
  background-color: var(--primary-color);
  background-color: transparent;
  border: none;
  color: white;
  font-family: "Chillax", sans-serif;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 2px;
  cursor: pointer;
  border-radius: 2px;
  /* box-shadow: 0 0 50px 15px rgba(0, 0, 0, 1), 0 0 25px 5px rgba(0, 0, 0, 1); */
  position: relative;
  height: 80px;
}

aside button svg {
  position: absolute;
  bottom: 0;
  left: 0;
  fill: var(--primary-color);
  height: 100%;
  width: 100%;
}

aside button svg path {
  fill: none;
}

aside button svg .fill {
  fill: var(--primary-color);
}

svg#button-scratched {
  display: none;
}

aside button:hover svg#button-full {
  display: none;
}

aside button:hover svg#button-scratched {
  display: block;
}

aside button:hover svg .fill {
  fill: var(--primary-color-hover);
}

aside button:active svg .fill {
  fill: var(--primary-color-active);
}

aside button span {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.actors {
  flex: 1;
  text-align: center;
  font-weight: 400;
  font-size: 1.5rem;
  padding: 30px 0;
}

.actors ul {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 100%;
}

.actors li {
  text-shadow: 0 0 0.5rem black;
}

.trailer {
  width: 100%;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  border-radius: 5px;
  box-shadow: 0 0 50px 15px rgba(0, 0, 0, 1), 0 0 25px 5px rgba(0, 0, 0, 1);
}

.trailer img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.trailer .overlay {
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.trailer:hover .overlay {
  background-color: rgba(255, 255, 255, 0.1);
}

.trailer .short-text {
  position: absolute;
  bottom: 10px;
  left: 50%;
  transform: translateX(-50%);
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 2px;
  transition: bottom 0.3s;
}

.trailer:hover .short-text {
  bottom: -30px;
}

.play-icon {
  height: 150px;
  aspect-ratio: 1;
  color: var(--primary-color);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, 60%);
  transition: transform 0.3s;
}

.trailer:hover .play-icon {
  transform: translate(-50%, -50%);
  transition: transform 0.3;
}

@media (max-width: 1440px) {
  main {
    padding: 100px;
    grid-template-columns: 2fr 1fr;
  }
}

@media (max-width: 1080px) {
  main {
    padding: 100px;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 4fr;
    grid-template-areas:
      "text"
      "aside";
  }

  .trailer {
    width: 50%;
    margin: auto;
  }
}

@media (aspect-ratio: 4/3) {
  main {
    padding: 50px;
  }

  h1 {
    font-size: 4rem;
  }
}

@media (max-width: 800px) {
  .vignette {
    pointer-events: none;
    box-shadow: inset 0 0 220px 200px rgba(0, 0, 0, 1);
  }

  main {
    padding: 20px;
  }

  h1 {
    font-size: 3rem;
  }

  .trailer {
    width: 80%;
  }

  .play-icon {
    transform: translate(-50%, 100%);
  }
}

@media (max-width: 600px) {
  .vignette {
    box-shadow: inset 0 0 180px 150px rgba(0, 0, 0, 1);
  }
}

